# playcards

./: LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
